--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Devilcat e Diabolic Dog</title>
     <link rel="shortcut icon" href="../../desafio dos videos/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../css/livro.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     </header>
