adicionei outra pagina

--- a/android/index.html
+++ b/android/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como Surgiu o Android</title>
     <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
         <a href="#">Notícias</a>
         <a href="#">Curiosidades</a>
         <a href="#">Fale Conosco</a>
-        <a href="historia.html"  target="_blank">Livros</a>
+        <a href="../index.html"  target="_blank">Livros</a>
     </nav>
     <main>
         <article>
@@ -37,8 +37,8 @@
             </p>
 
             <picture>
-                <source media="(max-width: 670px)" srcset="../imagens/dan-droids-pq.png">
-                <img src="../imagens/dan-droids.png" alt="primeiro mascotedo Android">
+                <source media="(max-width: 670px)" srcset="imagens/dan-droids-pq.png">
+                <img src="imagens/dan-droids.png" alt="primeiro mascotedo Android">
             </picture>
 
             <p>
@@ -54,15 +54,15 @@
             </p>
 
             <picture>
-                <source media="(max-width: 666px)" srcset="../imagens/irina-blok-pq.jpg">
-                <img src="../imagens/irina-blok.jpg" alt="Criadora do BugDroid">
+                <source media="(max-width: 666px)" srcset="imagens/irina-blok-pq.jpg">
+                <img src="imagens/irina-blok.jpg" alt="Criadora do BugDroid">
             </picture>
 
             <p>
                 A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.
             </p>
 
-            <img src="../imagens/bugdroid.png" class="pequena" alt="BugDroid">
+            <img src="imagens/bugdroid.png" class="pequena" alt="BugDroid">
 
             <p>
                 A principal inspiração para os traços do novo<strong> Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
