--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#" target="_blank">Notícias</a></li>
-            <li><a href="android.html" target="_blank">Curiosidades</a></li>
+            <li><a href="android/index.html" target="_blank">Curiosidades</a></li>
             <li><a href="#">Fale Conosco</a></li>
             <li><a href="#"  target="_blank">Livros</a></li>
           </ul>
