--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="#" target="_blank">Notícias</a></li>
             <li><a href="android/index.html" target="_blank">Curiosidades</a></li>
             <li><a href="#">Fale Conosco</a></li>
-            <li><a href="#"  target="_blank">Livros</a></li>
+            <li><a href="../Html-Css/desafios/projeto-cordel/index.html"  target="_blank">Livros</a></li>
           </ul>
         </nav>
       </main>
