--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h1>Start Livros</h1>
             <p>Todas as historias do mundo Geek em um unico lugar</p>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="../projeto-menu/index.html">Home</a></li>
             <li><a href="#" target="_blank">Notícias</a></li>
             <li><a href="android/index.html" target="_blank">Curiosidades</a></li>
             <li><a href="#">Fale Conosco</a></li>
