--- a/projeto-menu/index.html
+++ b/projeto-menu/index.html
@@ -21,8 +21,8 @@
     <header>
         <section>
             <ul>
-                <li class="estilo"><a href="../livro2/index.html">Livros <p>Livros como: Diabolic Dog e Devil Cat, Cordeu Tecnoligico, Cryptom</p></a></li>  
-                <li class="estilo"><a href="../livro2/android/index.html">Curiosidades <p>Curiodade Tipo:  Criação do BugDroid</p></a></li>
+                <li class="estilo"><a href="../index.html">Livros <p>Livros como: Diabolic Dog e Devil Cat, Cordeu Tecnoligico, Cryptom</p></a></li>  
+                <li class="estilo"><a href="../android/index.html">Curiosidades <p>Curiodade Tipo:  Criação do BugDroid</p></a></li>
                 <li class="estilo"><a href="#">Noticias</a></li>
                 <li class="estilo"><a href="https://www.instagram.com/https._start/">Fale Conosco <p>Você Pode acessar meu Instagram para perguntar sobre atualizações novas</p></a></li>
             </ul>
