--- a/projeto-menu/index.html
+++ b/projeto-menu/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start no Site</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="../livro2/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body>
     <main id="ajuste">
