--- a/projeto-menu/index.html
+++ b/projeto-menu/index.html
@@ -9,24 +9,24 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <main id="ajuste">
-        <nav class="menu">
-            <ul>
-                <li><a href="#">Login</a"></li>
-            </ul>
-        </nav>
-      </main>
-      <h1>Start Menu</h1>
-      <p id="beta">beta</p>
-    <header>
-        <section>
-            <ul>
-                <li class="estilo"><a href="../index.html">Livros <p>Livros como: Diabolic Dog e Devil Cat, Cordeu Tecnoligico, Cryptom</p></a></li>  
-                <li class="estilo"><a href="../android/index.html">Curiosidades <p>Curiodade Tipo:  Criação do BugDroid</p></a></li>
-                <li class="estilo"><a href="#">Noticias</a></li>
-                <li class="estilo"><a href="https://www.instagram.com/https._start/">Fale Conosco <p>Você Pode acessar meu Instagram para perguntar sobre atualizações novas</p></a></li>
-            </ul>
-        </section>
-    </header>
+    <div class="container">
+        <div class="container_card">
+            <div class="card card_1">
+                <div class="content">
+                    <div class="imagem">
+                        <img src="istockphoto-873507500-170667a.jpg" alt="Livro Medieval">
+                    </div>
+                </div>
+            </div>
+            <div class="card card_2">
+                <div class="content">
+                    <h1>Livros</h1>
+                    <h4>Livros de Ação, Terror, Ficção Cientifica.</h4>
+                    <p><br>Exemplos <br> <a href="../index.html" target="_blank">Devil Cat e Diabolic Dog</a> <br> Crypton <br><a href="../../Html-Css/desafios/projeto-cordel/index.html" target="_blank">Cordeu Moderno</a> <br> Etc</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
